# IRanges

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
.github/workflows/: build-docs.yml  publish-pypi.yml  run-tests.yml
_modules/: index.html
_modules/iranges/: IRanges.html  base.html  interval.html  irangeslist.html  sew_handler.html  utils.html
_sources/: index.md.txt  tutorial.md.txt
_sources/api/: iranges.rst.txt  modules.rst.txt
api/: iranges.html  modules.html
docs/: CMakeLists copy.txt  conf.py  tutorial.md
lib/: CMakeLists.txt
lib/src/: c_superintervals.h  coverage.cpp  init.cpp  interranges.cpp  iranges.cpp  nclsoverlaps.cpp  nclssearch.cpp  superintervals.hpp  superintervals_bindings.cpp
src/iranges/: IRanges.py  __init__.py  interval.py  irangeslist.py  sew_handler.py  utils.py
tests/: conftest.py  test_IRanges.py  test_IRanges_pandas.py  test_IRanges_polars.py  test_construction.py  test_coverage.py  test_interrange.py  test_intrarange.py  test_irangeslist.py  test_order_ops.py  test_overlap.py  test_overlaps.py  test_set_ops.py  test_skeleton.py  test_tile.py
tests/R-checks/: coverage.R  interrange.R  intraranges.R  overlaps.R  setops.R
